--- a/python_code/api/requirements.txt
+++ b/python_code/api/requirements.txt
@@ -1,5 +1,6 @@
-pandas==2.0.3
+pandas==2.2.3
+numpy==2.2.1
 python-dotenv==1.0.1
-openai==1.50.2
-runpod==1.7.1
-pinecone==5.3.1
+openai==1.59.7
+runpod==1.7.7
+pinecone==5.4.2
