--- a/python_code/requirements.txt
+++ b/python_code/requirements.txt
@@ -1,7 +1,9 @@
-pandas==2.0.3
+pandas==2.2.3
 python-dotenv==1.0.1
-pinecone==5.3.1
+pinecone==5.4.2
 firebase-admin==6.0.1
 google-cloud-storage==2.18.2
 mlxtend==0.23.1
-openai==1.50.2
+openai==1.59.7
+scikit-learn==1.3.0
+runpod==1.7.7
